[package]
name = "euler-app"
version = "0.1.0"
authors = ["discite-mac <4948877+discite@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.17"
